--- a/src/app/app.config.json
+++ b/src/app/app.config.json
@@ -1,6 +1,6 @@
 {
   "appname": "Connor Buyer New",
-  "ocscope": "DevCenterImpersonate FullAccess BuyerAdmin BuyerReader",
+  "ocscope": "FullAccess BuyerAdmin BuyerReader",
   "clientid": "4B2790D5-03EC-405C-85F9-0A021A04E371",
   "buyerid": "Connor-Buyer-New",
   "environment": "qa"
